Add Google Maps Tracking API

--- a/floorplan.yaml
+++ b/floorplan.yaml
@@ -70,7 +70,7 @@
             '
         - name: Text Sensors
           entities:
-             - device_tracker.trents_galaxy
+             - device_tracker.google_maps_109209758211303121867
              - device_tracker.rachels_iphone
              - sensor.time
              - sensor.date
