--- a/includes/automation/milight_control.yaml
+++ b/includes/automation/milight_control.yaml
@@ -32,7 +32,7 @@
 - alias: Entry Light Trent Arrives Home
   trigger:
   - platform: state
-    entity_id: device_tracker.trents_galaxy
+    entity_id: device_tracker.google_maps_109209758211303121867
     to: home
   - platform: state
     entity_id: device_tracker.rachels_iphone
