--- a/includes/logbook.yaml
+++ b/includes/logbook.yaml
@@ -6,7 +6,7 @@
 
 include:
   entities:
-    - device_tracker.trents_galaxy
+    - device_tracker.google_maps_109209758211303121867
     - device_tracker.rachels_iphone
     - sensor.speedtest_ping
     - sensor.speedtest_download
