--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -95,6 +95,10 @@ gh_access_token: 123456789
 ga_api_broadcast_message: http://0.0.0.0
 ga_api_command: http://0.0.0.0:5000
 
+# Google Maps API Account
+google_mapsapi_username: email@domain.com
+google_mapsapi_password: fakepassword
+
 # Synology
 sensor_synology_host: 0.0.0.0
 sensor_synology_username: fakeusername
