--- a/configuration.yaml
+++ b/configuration.yaml
@@ -168,8 +168,11 @@ mqtt:
 #  username: !secret cloud_mqtt_username
 #  password: !secret cloud_mqtt_password
 
-#   Owntracks
 device_tracker:
+# Google Maps API Tracking
+  - platform: google_maps
+    username: !secret google_mapsapi_username
+    password: !secret google_mapsapi_password
 # MQTT / Zanzito based device tracking
   - platform: mqtt_json
     devices:
