--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ secrets.yaml
 known_devices.yaml
 .google_maps_location_sharing.cookies
 *.conf
+.homekit.state
 plex.conf
 phue.conf
 harmony_media_room.conf
