--- a/packages/security_sensors.yaml
+++ b/packages/security_sensors.yaml
@@ -9,10 +9,10 @@ homeassistant:
   customize:
     sensor.door_count:
       friendly_name: Open Door Count
-      icon: mdi:window-open
+      icon: mdi:door-open
     sensor.window_count:
       friendly_name: Open Window Count
-      icon: mdi:door-open
+      icon: mdi:window-open
     binary_sensor.door_window_sensor_158d000186f0ec:
       friendly_name: Back Door Sensor
       device_class: door
@@ -51,7 +51,7 @@ sensor:
     sensors:
       door_count:
         value_template: >-
-          {{ states.binary_sensor | selectattr('state', 'eq', 'on') | selectattr('attributes.device_class', 'eq', 'door') | list | count }}
+          {{ states.binary_sensor | selectattr('state', 'eq', 'on') | selectattr('attributes.device_class', 'eq', 'door') | list | count | int }}
       window_count:
         value_template: >-
-          {{ states.binary_sensor | selectattr('state', 'eq', 'on') | selectattr('attributes.device_class', 'eq', 'window') | list | count }}
+          {{ states.binary_sensor | selectattr('state', 'eq', 'on') | selectattr('attributes.device_class', 'eq', 'window') | list | count | int }}
