--- a/packages/speech_processing.yaml
+++ b/packages/speech_processing.yaml
@@ -6,6 +6,8 @@
     # service: script.speech_processing
     # data_template:
     #   speech_message:
+    
+# To force change second section to: 'service: script.speech_processing'
 # Original Repo : https://github.com/CCOSTAN/Home-AssistantConfig
 ############################################################
 
@@ -40,7 +42,6 @@ script:
           topic: 'broadcast/lastmsg'
           payload: 'This Message is from {{now().strftime("%I")}}:{{now().strftime("%M")}} {{now().strftime("%p")}}. {{speech_message}}'
           retain: true
-  
       - condition: and
         conditions:
           - condition: or
@@ -62,6 +63,20 @@ script:
           - condition: state
             entity_id: input_boolean.speech_notifications
             state: 'on'
+      - service: notify.google_assistant_broadcast
+        data_template:
+          message: '{{speech_message}}'
+      - service: input_boolean.turn_off
+        entity_id:
+          - input_boolean.alert_mode
+          - input_boolean.lastmsg
+  speech_processing_force:
+    sequence:
+      - service: mqtt.publish
+        data_template:
+          topic: 'broadcast/lastmsg'
+          payload: 'This Message is from {{now().strftime("%I")}}:{{now().strftime("%M")}} {{now().strftime("%p")}}. {{speech_message}}'
+          retain: true
       - service: notify.google_assistant_broadcast
         data_template:
           message: '{{speech_message}}'
