Added Robot Vacuum Zones, Vacuum Floor Panel Control, Light Automations.

--- a/includes/group.yaml
+++ b/includes/group.yaml
@@ -29,6 +29,7 @@ home_view:
     - group.ac_scheduler
     - group.bedroomfan
     - group.robot_vacuum
+    - group.vacuum_a_room
 security_view:
   view: yes
   icon: mdi:cctv
@@ -126,6 +127,7 @@ automation_override:
     - input_boolean.disable_dustbin_notification
     - input_boolean.disable_entry_light_trent_home
     - input_boolean.disable_entryway_light_frontdoor
+    - input_boolean.disable_livingroom_light_frontdoor
     - input_boolean.disable_auto_off_outside_heater
 multisensor:
   name: Multisensors
