--- a/packages/trash_recycle.yaml
+++ b/packages/trash_recycle.yaml
@@ -1,6 +1,6 @@
 ###############################################################################
 #   @author         :   Mahasri Kalavala
-#   @modified       :   Trent
+#   @modified       :   Trent Stanton
 #   @date           :   04/15/2017
 #   @package        :   Trash & Recycle
 #   @description    :   Trash & Recycle Pickup Scheduler and Reminder
