--- a/floorplan_vacuum.yaml
+++ b/floorplan_vacuum.yaml
@@ -6,9 +6,6 @@
       # warnings:            # enable warnings (to find out why things might not be working correctly)
       # pan_zoom:            # enable experimental panning / zooming
 
-      last_motion_entity: sensor.template_last_motion
-      last_motion_class: last-motion
-
       groups:
         - name: Vacuum Scripts
           entities:
@@ -24,3 +21,17 @@
           action:
             domain: script
             service: turn_on
+
+        - name: Vacuum Sensors
+          entities:
+             - sensor.xiaomi_vacuum_cleaner_status
+          text_template: '${entity.state ? entity.state : "unknown"}'
+          states:
+            - state: 'Charging'
+              class: 'info-text'
+            - state: 'Zoned cleaning'
+              class: 'success-text'
+            - state: 'Cleaning'
+              class: 'success-text'
+            - state: 'Returning home'
+              class: 'warning-text'
